# bevy_web_drop_image_demo

./: Cargo.toml  README.md  index.html
docs/: bevy_web_drop_image-2e876462dacdc081.js
src/: main.rs
src/web/: channel.rs  plugin.rs
