[package]
name = "bevy_web_drop_image"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14"

[target.'cfg(target_family = "wasm")'.dependencies]
gloo = { version = "0.11", features = ["utils"] }
bevy_crossbeam_event = "0.6"

[target.'cfg(target_family = "wasm")'.dependencies.web-sys]
version = "0.3"
features = [
    "HtmlElement",
    "HtmlInputElement",
    "Window",
    "Document",
    "Element",
    "EventTarget",
    "Event",
    "DataTransfer",
    "DataTransferItem",
    "DataTransferItemList",
    "DragEvent",
    "FileList",
]
